try replace with my bib change index to pub.bib

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Albert Einstein's Example Publication Page</title>
+    <title>D. Scott Smith Publications</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />    
@@ -19,7 +19,7 @@
       <div class="col-md-4">
         <img style="width: 100%" src="picture.png"/>
 
-        <h2>Prof. Albert Einstein</h2>
+        <h2>Prof. Scott Smith</h2>
 
         <br>
 
@@ -67,7 +67,7 @@
 
         <h2>Publications</h2>
 
-        <script src="https://bibbase.org/show?bib=https://bibbase.github.io/pubs_without_questionmarks.bib&jsonp=1"></script>
+        <script src="https://bibbase.org/show?bib=https://bibbase.github.io/pubs.bib&jsonp=1&token=3b9bb5a33ec037cacc3decc76f44caf5"></script>
 
       </div>
     </div>
