--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <h2>Publications</h2>
 
-        <script src="https://bibbase.org/show?bib=https://bibbase.github.io/pubs.bib&jsonp=1&token=3b9bb5a33ec037cacc3decc76f44caf5"></script>
+        <script src="https://bibbase.org/show?bib=https://skotssd.github.io/pubs.bib&jsonp=1&token=3b9bb5a33ec037cacc3decc76f44caf5"></script>
 
       </div>
     </div>
