--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <h2>Prof. Scott Smith</h2>
         <a href="https://www.wlu.ca/">Wilfrid Laurier University</a>,<br>
       <h2>Publications</h2>
-      <script src="https://bibbase.org/show?bib=https://skotssd.github.io/pubs.bib&jsonp=1&token=3b9bb5a33ec037cacc3decc76f44caf5"></script>
+      <script src="https://bibbase.org/show?bib=https://skotssd.github.io/pubs.bib&jsonp=1"></script>
   </body>
 </html>
