fix picture width

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <html>
   <head>
-    <title>Albert Einstein's Example Publication Page</title>
+    <title>Dr. Scott Smith Publication Page</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />    
@@ -26,7 +26,7 @@
   <body>
     <div class="row">
       <div class="col-md-4">
-        <img style="width: 100%" src="picture.jpg"/>
+        <img style="width: 25%" src="picture.jpg"/>
 
         <h2>Professor Scott Smith</h2>
 
