--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 
         <h2>Publications</h2>
 
-        <script src="https://bibbase.org/show?bib=https://skotssd.github.io/DSS_all_journal_pubs.bib&jsonp=1"></script>
+        <!--<script src="https://bibbase.org/show?bib=https://skotssd.github.io/DSS_all_journal_pubs.bib&jsonp=1"></script>-->
+        
+        <script src="https://bibbase.org/show?bib=http%3A%2F%2Fclearlab.synology.me%2FDSS_all_journal_pubs.bib&commas=true&jsonp=1"></script>
 
       </div>
     </div>
