fix lab page link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>
           Links:
           <ul>
-            <li><a href="http://clearlab.synology.me/">Lab Page</a></li>
+            <li><a href="https://skotssd.github.io/CLEARlab/">Lab Page</a></li>
            </ul>
         </p>
         <div class="spacer">
