--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>
           Links:
           <ul>
-            <li><a href="https://skotssd.github.io/CLEARlab/">Lab Page</a></li>
+            <li><a href="https://skotssd.github.io/CLEARlab/">Lab Pages</a></li>
            </ul>
         </p>
         <div class="spacer">
@@ -57,8 +57,6 @@
         <h2>Publications</h2>
 
        <script src="https://bibbase.org/show?bib=https://skotssd.github.io/DSS_all_journal_pubs.bib&jsonp=1"></script>
-        
-        <!--<script src="https://bibbase.org/show?bib=http%3A%2F%2Fclearlab.synology.me%2FDSS_all_journal_pubs.bib&commas=true&jsonp=1"></script>-->
 
       </div>
     </div>
